[project]
name = "podcaster"
version = "0.1.0"
description = "podcaster using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
podcaster = "podcaster.main:run"
run_crew = "podcaster.main:run"
train = "podcaster.main:train"
replay = "podcaster.main:replay"
test = "podcaster.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
